# etch

./: .bumpversion.toml  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  ruff.yml
etch/api/: client.py
etch/cli/: __init__.py  cli.py
etch/compile/: parser.py
etch/project/: project.py
etch/templates/: README.md
etch/util/: __init__.py  constants.py  install.py  settings.py  tool_versions.py  util.py
examples/: README.md
tests/cli/: test_cli.py
tests/util/: test_install.py  test_settings.py
